<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalContactManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">Email</string>
    <string name="add_photo">Add Photo</string>
    <string name="done">Done</string>
    <string name="contact_photo">Pick Photo</string>

</resources>
